Update base href of index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   }
 </style>
 
-<base href="/">
+<base href="/yaman.github.io/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
