fixed instant action for contact items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   }
 </style>
 
-<base href="/yaman.github.io/">
+<base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
