--- a/index.html
+++ b/index.html
@@ -17,6 +17,58 @@
     font-size: 18px;
     z-index: 9999;
   }
+
+ #loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  font-family: 'Segoe UI', 'Helvetica Neue', sans-serif;
+  font-size: 1.15rem;
+  color: #2c3e50;
+  font-weight: 500;
+  letter-spacing: 0.3px;
+  text-align: center;
+
+  opacity: 0;
+  animation: fadeIn 0.6s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(6px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+  .spinner {
+    border: 5px solid #f3f3f3; /* Light gray */
+    border-top: 5px solid #2c3e50; /* Dark blue/gray */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    margin-bottom: 12px;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 </style>
 
 <base href="/yaman.github.io/">
@@ -38,7 +90,11 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <div id="loader">Naqra is loading...</div>
+  <div id="loader">
+  <div class="spinner"></div>
+  Smart Profile is Loading...
+  </div>
+
 
   <script>
     // REMOVE LOADER AFTER FLUTTER LOAD
